--- a/QuickLook/packages.config
+++ b/QuickLook/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net462" />
+  <package id="PdfiumViewer" version="2.13.0.0" targetFramework="net472" />
 </packages>
