--- a/QuickLook/packages.config
+++ b/QuickLook/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.CodeCoverage" version="15.9.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net462" />
   <package id="PdfiumViewer" version="2.13.0.0" targetFramework="net472" />
 </packages>
